<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/tvQT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_question_lib"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="30dp"/>
    <Spinner
        android:id="@+id/spnQuestionType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvQT"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <TextView
        android:id="@+id/tvQC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_question_count"
        app:layout_constraintTop_toBottomOf="@+id/spnQuestionType"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="30dp"/>
    <Spinner
        android:id="@+id/spnQuestionCnt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvQC"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <TextView
        android:id="@+id/tvAL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_answer_limit"
        app:layout_constraintTop_toBottomOf="@+id/spnQuestionCnt"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="30dp"/>
    <Spinner
        android:id="@+id/spnAnswerTimeByQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvAL"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

    <Button
        android:id="@+id/btnPrepareExam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:textSize="30dp"
        android:text="@string/button_prepare_exam"/>

</android.support.constraint.ConstraintLayout>