<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExamActivity">

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="00:00:00"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:textSize="30dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/txtQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_prepare_exam"
        app:layout_constraintTop_toBottomOf="@+id/txtTime"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:textSize="30dp"/>

    <LinearLayout
        android:id="@+id/answerBtnBar_line_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/txtQuestion"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <Button
            android:id="@+id/btnAnswer_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="A"
            android:textSize="30dp"/>
        <Button
            android:id="@+id/btnAnswer_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="B"
            android:textSize="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/answerBtnBar_line_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/answerBtnBar_line_1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <Button
            android:id="@+id/btnAnswer_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="C"
            android:textSize="30dp"/>
        <Button
            android:id="@+id/btnAnswer_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="D"
            android:textSize="30dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="message"
        app:layout_constraintBottom_toTopOf="@+id/btnStartExam"
        android:layout_margin="10dp"
        android:textSize="30dp"
        android:textColor="@android:color/holo_red_dark"
        android:textAlignment="center"/>
    <Button
        android:id="@+id/btnStartExam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/bottomBtnBar"
        android:layout_margin="10dp"
        android:text="@string/button_start_exam"
        android:textSize="30dp"/>
    <LinearLayout
        android:id="@+id/bottomBtnBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/btnExamResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/button_exam_result"
            android:textSize="30dp"/>
        <Button
            android:id="@+id/btnBackToMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/button_back"
            android:textSize="30dp"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>